--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -6,7 +6,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd hh:mm:ss} %5p %C:%L
 
 ### direct messages to file hibernate.log ###
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=applog.log
+log4j.appender.file.File=logs/jasperprint.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd hh:mm:ss} %5p %C:%L - %m%n
 # Set the maximum file size before rollover
