--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -16,7 +16,7 @@ log4j.appender.file.MaxBackupIndex=3
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
-log4j.rootLogger=info, file, stdout
+log4j.rootLogger=warn, file, stdout
 
 #actual application logging
 #log4j.logger.classicacctapp=info
